[package]
name = "sandboxed"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { verstion = "1.13.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
nalgebra = "0.32.1"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
wgpu = "0.15"
wgpu_text = "0.6.6"
winit = "0.28"
